--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -19,6 +19,9 @@
                 <li><a href="#sobre">Sobre</a></li>
             </ul>
         </div>
+        <div class="mainContent">
+            <h2 id="home">Página inicial</h2>
+        </div>
     </div>
 </body>
 </html>
